# basic_actix_web_server_v2

./: Cargo.toml  Dockerfile  ExtendedSpec.md  ReadMe.md  docker-compose.yml
migrations/: 20250226162834_create_items_table.sql  20250227051719_create_users_table.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: auth_handler.rs  health_handler.rs  items_handler.rs  mod.rs
src/middleware/: auth.rs
src/models/: claim.rs  item.rs  mod.rs  post_item.rs
src/routes/: auth.rs  health.rs  items.rs  mod.rs
src/utils/: hash_utils.rs
